--- a/styles/style.css
+++ b/styles/style.css
@@ -105,3 +105,29 @@ main {
     padding-left: 10px;
     padding-bottom: 10px;
 }
+
+/* media queries */
+@media only screen and (max-width: 688px) {
+    .container {
+        width: 100%;
+    }
+    .players, .blogs, .courses {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .player, .blog {
+        flex-direction: column;
+    }
+}
+
+/* tablet devices */
+@media only screen and (min-width: 688px) and (max-width: 992px) {
+    .container {
+        width: 100%;
+    }
+    .players {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .courses {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
